--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,400;12..96,600;12..96,700;12..96,800&family=Quicksand:wght@300;400;500;600;700&display=swap');
+*{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding:0;
+  margin:0;
+}
+:root{
+  --bg-color: #1e1e2e;
+  --card-bg: #27293d;
+  --list-bg: #383b5a;
+  --main-color: #2185f8;
+  --sub-heading-text-color: #2185f8;
+  --text-color: #ffffff;
+  --semi-text-color: #bed5fc;
+  --main-transition: all 0.2s 0s linear;
+  --main-br: 6px;
+  --main-shadow: 11px 5px 13px -7px #000;
+  --card-heading-span-color:#7c9a9a;
+  --icons-color: #c63daa;
+  --icons-border-color: #e44cc4;
+  --disabled-input-text: #304170;
+  --disabled-input-bg: #1d253b;
+  --primary-color: #e66ad2;
+  --info-color: #419ef9;
+  --success-color: #00bf9a;
+  --warning-color: #ff9f89;
+  --danger-color: #d72727;
+}
+*::-webkit-scrollbar{
+  background-color: transparent;
+  border-radius: 10px;
+  width: 10px;
+  transition: var(--main-transition);
+}
+*::-webkit-scrollbar-thumb{
+  background-color: transparent;
+  transition: var(--main-transition);
+  border-radius: 10px;
+}
+*:hover::-webkit-scrollbar{
+  background-color: var(--semi-text-color);
+}
+*:hover::-webkit-scrollbar-thumb{
+  background-color: var(--list-bg);
+}
+a{
+  text-decoration: none;
+}
+a.active{
+  color: var(--text-color) !important;
+}
+textarea,input{
+  border: none;
+  outline: none;
+}
+textarea:focus,input:focus{
+  border: none;
+  outline: none;
+}
+img{
+  max-width: 100%;
+}
+ul{
+  list-style: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  padding: 30px 0px 30px 20px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-family: "Quicksand", sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 500px) {
+  body{
+    padding-top: 0px;
   }
 }
